// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RichField should render a MentionSuggestions component to the DOM if in internal-note mode 1`] = `
<div
  class="rich-textarea-wrapper"
>
  <div
    class="editor-wrapper"
    role="presentation"
  >
    <div
      class="withMinHeight"
    >
      <div
        class="DraftEditor-root"
      >
        <div
          class="DraftEditor-editorContainer"
        >
          <div
            aria-autocomplete="list"
            aria-describedby="placeholder-123"
            aria-expanded="true"
            class="notranslate public-DraftEditor-content"
            contenteditable="true"
            role="combobox"
            spellcheck="false"
            style="outline: none; user-select: text; white-space: pre-wrap; word-wrap: break-word;"
          >
            <div
              data-contents="true"
            >
              <div
                class=""
                data-block="true"
                data-editor="123"
                data-offset-key="123-0-0"
              >
                <div
                  class="public-DraftStyleDefault-block public-DraftStyleDefault-ltr"
                  data-offset-key="123-0-0"
                >
                  <span
                    data-offset-key="123-0-0"
                  >
                    <span
                      data-text="true"
                    >
                      html
                    </span>
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="editor-toolbar page"
  >
    <div
      class="actionsWrapper"
    >
      <div
        class="actions"
      >
        <button
          aria-disabled="false"
          class="ui-button-wrapper-cef1 button wrapper small ui-button-fill-cef1 ui-button-secondary-cef1 ui-button-small-cef1"
          id="toolbar-button-10"
          type="button"
        >
          <span
            class="ui-button-content-cef1"
          >
            <i
              class="material-icons icon"
            >
              format_bold
            </i>
          </span>
        </button>
        <button
          aria-disabled="false"
          class="ui-button-wrapper-cef1 button wrapper small ui-button-fill-cef1 ui-button-secondary-cef1 ui-button-small-cef1"
          id="toolbar-button-11"
          type="button"
        >
          <span
            class="ui-button-content-cef1"
          >
            <i
              class="material-icons icon"
            >
              format_italic
            </i>
          </span>
        </button>
        <button
          aria-disabled="false"
          class="ui-button-wrapper-cef1 button wrapper small ui-button-fill-cef1 ui-button-secondary-cef1 ui-button-small-cef1"
          id="toolbar-button-12"
          type="button"
        >
          <span
            class="ui-button-content-cef1"
          >
            <i
              class="material-icons icon"
            >
              format_underline
            </i>
          </span>
        </button>
        <button
          aria-disabled="false"
          class="ui-button-wrapper-cef1 button wrapper small ui-button-fill-cef1 ui-button-secondary-cef1 ui-button-small-cef1"
          id="toolbar-button-13"
          type="button"
        >
          <span
            class="ui-button-content-cef1"
          >
            <i
              class="material-icons icon"
            >
              link
            </i>
          </span>
        </button>
        <span
          aria-hidden="true"
        />
        <button
          aria-disabled="false"
          class="ui-button-wrapper-cef1 button wrapper small ui-button-fill-cef1 ui-button-secondary-cef1 ui-button-small-cef1"
          id="toolbar-button-14"
          type="button"
        >
          <span
            class="ui-button-content-cef1"
          >
            <i
              class="material-icons icon"
            >
              insert_photo
            </i>
          </span>
        </button>
        <button
          aria-disabled="false"
          class="ui-button-wrapper-cef1 button wrapper small ui-button-fill-cef1 ui-button-secondary-cef1 ui-button-small-cef1"
          id="toolbar-button-15"
          type="button"
        >
          <span
            class="ui-button-content-cef1"
          >
            <i
              class="material-icons icon"
            >
              insert_emoticon
            </i>
          </span>
        </button>
        <button
          aria-disabled="false"
          class="ui-button-wrapper-cef1 wrapper ghost small ui-button-ghost-cef1 ui-button-secondary-cef1 ui-button-small-cef1"
          id="contactFormButton"
          type="button"
        >
          <span
            class="ui-button-content-cef1"
          >
            <i
              class="material-icons icon"
            >
              wysiwyg
            </i>
          </span>
        </button>
        <button
          aria-disabled="false"
          class="ui-button-wrapper-cef1 button wrapper small ui-button-fill-cef1 ui-button-secondary-cef1 ui-button-small-cef1"
          id="toolbar-button-16"
          type="button"
        >
          <span
            class="ui-button-content-cef1"
          >
            <i
              class="material-icons icon"
            >
              title
            </i>
          </span>
        </button>
        <button
          aria-disabled="false"
          class="ui-button-wrapper-cef1 button wrapper small ui-button-fill-cef1 ui-button-secondary-cef1 ui-button-small-cef1"
          id="toolbar-button-17"
          type="button"
        >
          <span
            class="ui-button-content-cef1"
          >
            <i
              class="material-icons icon"
            >
              format_list_bulleted
            </i>
          </span>
        </button>
        <button
          aria-disabled="false"
          class="ui-button-wrapper-cef1 button wrapper small ui-button-fill-cef1 ui-button-secondary-cef1 ui-button-small-cef1"
          id="toolbar-button-18"
          type="button"
        >
          <span
            class="ui-button-content-cef1"
          >
            <i
              class="material-icons icon"
            >
              format_list_numbered
            </i>
          </span>
        </button>
        <div
          class="hoverOverlay"
        >
          Add files as attachments
        </div>
        <div
          class="rightSection"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`RichField should render a basic input 1`] = `
<div
  class="rich-textarea-wrapper"
>
  <div
    class="editor-wrapper"
    role="presentation"
  >
    <div
      class="withMinHeight"
    >
      <div
        class="DraftEditor-root"
      >
        <div
          class="DraftEditor-editorContainer"
        >
          <div
            aria-autocomplete="list"
            aria-describedby="placeholder-123"
            aria-expanded="true"
            class="notranslate public-DraftEditor-content"
            contenteditable="true"
            role="combobox"
            spellcheck="false"
            style="outline: none; user-select: text; white-space: pre-wrap; word-wrap: break-word;"
          >
            <div
              data-contents="true"
            >
              <div
                class=""
                data-block="true"
                data-editor="123"
                data-offset-key="123-0-0"
              >
                <div
                  class="public-DraftStyleDefault-block public-DraftStyleDefault-ltr"
                  data-offset-key="123-0-0"
                >
                  <span
                    data-offset-key="123-0-0"
                  >
                    <span
                      data-text="true"
                    >
                      html
                    </span>
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="editor-toolbar page"
  >
    <div
      class="actionsWrapper"
    >
      <div
        class="actions"
      >
        <button
          aria-disabled="false"
          class="ui-button-wrapper-cef1 button wrapper small ui-button-fill-cef1 ui-button-secondary-cef1 ui-button-small-cef1"
          id="toolbar-button-1"
          type="button"
        >
          <span
            class="ui-button-content-cef1"
          >
            <i
              class="material-icons icon"
            >
              format_bold
            </i>
          </span>
        </button>
        <button
          aria-disabled="false"
          class="ui-button-wrapper-cef1 button wrapper small ui-button-fill-cef1 ui-button-secondary-cef1 ui-button-small-cef1"
          id="toolbar-button-2"
          type="button"
        >
          <span
            class="ui-button-content-cef1"
          >
            <i
              class="material-icons icon"
            >
              format_italic
            </i>
          </span>
        </button>
        <button
          aria-disabled="false"
          class="ui-button-wrapper-cef1 button wrapper small ui-button-fill-cef1 ui-button-secondary-cef1 ui-button-small-cef1"
          id="toolbar-button-3"
          type="button"
        >
          <span
            class="ui-button-content-cef1"
          >
            <i
              class="material-icons icon"
            >
              format_underline
            </i>
          </span>
        </button>
        <button
          aria-disabled="false"
          class="ui-button-wrapper-cef1 button wrapper small ui-button-fill-cef1 ui-button-secondary-cef1 ui-button-small-cef1"
          id="toolbar-button-4"
          type="button"
        >
          <span
            class="ui-button-content-cef1"
          >
            <i
              class="material-icons icon"
            >
              link
            </i>
          </span>
        </button>
        <span
          aria-hidden="true"
        />
        <button
          aria-disabled="false"
          class="ui-button-wrapper-cef1 button wrapper small ui-button-fill-cef1 ui-button-secondary-cef1 ui-button-small-cef1"
          id="toolbar-button-5"
          type="button"
        >
          <span
            class="ui-button-content-cef1"
          >
            <i
              class="material-icons icon"
            >
              insert_photo
            </i>
          </span>
        </button>
        <button
          aria-disabled="false"
          class="ui-button-wrapper-cef1 button wrapper small ui-button-fill-cef1 ui-button-secondary-cef1 ui-button-small-cef1"
          id="toolbar-button-6"
          type="button"
        >
          <span
            class="ui-button-content-cef1"
          >
            <i
              class="material-icons icon"
            >
              insert_emoticon
            </i>
          </span>
        </button>
        <button
          aria-disabled="false"
          class="ui-button-wrapper-cef1 wrapper ghost small ui-button-ghost-cef1 ui-button-secondary-cef1 ui-button-small-cef1"
          id="contactFormButton"
          type="button"
        >
          <span
            class="ui-button-content-cef1"
          >
            <i
              class="material-icons icon"
            >
              wysiwyg
            </i>
          </span>
        </button>
        <button
          aria-disabled="false"
          class="ui-button-wrapper-cef1 button wrapper small ui-button-fill-cef1 ui-button-secondary-cef1 ui-button-small-cef1"
          id="toolbar-button-7"
          type="button"
        >
          <span
            class="ui-button-content-cef1"
          >
            <i
              class="material-icons icon"
            >
              title
            </i>
          </span>
        </button>
        <button
          aria-disabled="false"
          class="ui-button-wrapper-cef1 button wrapper small ui-button-fill-cef1 ui-button-secondary-cef1 ui-button-small-cef1"
          id="toolbar-button-8"
          type="button"
        >
          <span
            class="ui-button-content-cef1"
          >
            <i
              class="material-icons icon"
            >
              format_list_bulleted
            </i>
          </span>
        </button>
        <button
          aria-disabled="false"
          class="ui-button-wrapper-cef1 button wrapper small ui-button-fill-cef1 ui-button-secondary-cef1 ui-button-small-cef1"
          id="toolbar-button-9"
          type="button"
        >
          <span
            class="ui-button-content-cef1"
          >
            <i
              class="material-icons icon"
            >
              format_list_numbered
            </i>
          </span>
        </button>
        <div
          class="hoverOverlay"
        >
          Add files as attachments
        </div>
        <div
          class="rightSection"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`RichField should render default content state 1`] = `
<div
  class="rich-textarea-wrapper"
>
  <div
    class="editor-wrapper"
    role="presentation"
  >
    <div
      class="withMinHeight"
    >
      <div
        class="DraftEditor-root"
      >
        <div
          class="DraftEditor-editorContainer"
        >
          <div
            aria-autocomplete="list"
            aria-describedby="placeholder-123"
            aria-expanded="true"
            class="notranslate public-DraftEditor-content"
            contenteditable="true"
            role="combobox"
            spellcheck="false"
            style="outline: none; user-select: text; white-space: pre-wrap; word-wrap: break-word;"
          >
            <div
              data-contents="true"
            >
              <div
                class=""
                data-block="true"
                data-editor="123"
                data-offset-key="123-0-0"
              >
                <div
                  class="public-DraftStyleDefault-block public-DraftStyleDefault-ltr"
                  data-offset-key="123-0-0"
                >
                  <span
                    data-offset-key="123-0-0"
                  >
                    <span
                      data-text="true"
                    >
                      foo
                    </span>
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="editor-toolbar page"
  >
    <div
      class="actionsWrapper"
    >
      <div
        class="actions"
      >
        <button
          aria-disabled="false"
          class="ui-button-wrapper-cef1 button wrapper small ui-button-fill-cef1 ui-button-secondary-cef1 ui-button-small-cef1"
          id="toolbar-button-37"
          type="button"
        >
          <span
            class="ui-button-content-cef1"
          >
            <i
              class="material-icons icon"
            >
              format_bold
            </i>
          </span>
        </button>
        <button
          aria-disabled="false"
          class="ui-button-wrapper-cef1 button wrapper small ui-button-fill-cef1 ui-button-secondary-cef1 ui-button-small-cef1"
          id="toolbar-button-38"
          type="button"
        >
          <span
            class="ui-button-content-cef1"
          >
            <i
              class="material-icons icon"
            >
              format_italic
            </i>
          </span>
        </button>
        <button
          aria-disabled="false"
          class="ui-button-wrapper-cef1 button wrapper small ui-button-fill-cef1 ui-button-secondary-cef1 ui-button-small-cef1"
          id="toolbar-button-39"
          type="button"
        >
          <span
            class="ui-button-content-cef1"
          >
            <i
              class="material-icons icon"
            >
              format_underline
            </i>
          </span>
        </button>
        <button
          aria-disabled="false"
          class="ui-button-wrapper-cef1 button wrapper small ui-button-fill-cef1 ui-button-secondary-cef1 ui-button-small-cef1"
          id="toolbar-button-40"
          type="button"
        >
          <span
            class="ui-button-content-cef1"
          >
            <i
              class="material-icons icon"
            >
              link
            </i>
          </span>
        </button>
        <span
          aria-hidden="true"
        />
        <button
          aria-disabled="false"
          class="ui-button-wrapper-cef1 button wrapper small ui-button-fill-cef1 ui-button-secondary-cef1 ui-button-small-cef1"
          id="toolbar-button-41"
          type="button"
        >
          <span
            class="ui-button-content-cef1"
          >
            <i
              class="material-icons icon"
            >
              insert_photo
            </i>
          </span>
        </button>
        <button
          aria-disabled="false"
          class="ui-button-wrapper-cef1 button wrapper small ui-button-fill-cef1 ui-button-secondary-cef1 ui-button-small-cef1"
          id="toolbar-button-42"
          type="button"
        >
          <span
            class="ui-button-content-cef1"
          >
            <i
              class="material-icons icon"
            >
              insert_emoticon
            </i>
          </span>
        </button>
        <button
          aria-disabled="false"
          class="ui-button-wrapper-cef1 wrapper ghost small ui-button-ghost-cef1 ui-button-secondary-cef1 ui-button-small-cef1"
          id="contactFormButton"
          type="button"
        >
          <span
            class="ui-button-content-cef1"
          >
            <i
              class="material-icons icon"
            >
              wysiwyg
            </i>
          </span>
        </button>
        <button
          aria-disabled="false"
          class="ui-button-wrapper-cef1 button wrapper small ui-button-fill-cef1 ui-button-secondary-cef1 ui-button-small-cef1"
          id="toolbar-button-43"
          type="button"
        >
          <span
            class="ui-button-content-cef1"
          >
            <i
              class="material-icons icon"
            >
              title
            </i>
          </span>
        </button>
        <button
          aria-disabled="false"
          class="ui-button-wrapper-cef1 button wrapper small ui-button-fill-cef1 ui-button-secondary-cef1 ui-button-small-cef1"
          id="toolbar-button-44"
          type="button"
        >
          <span
            class="ui-button-content-cef1"
          >
            <i
              class="material-icons icon"
            >
              format_list_bulleted
            </i>
          </span>
        </button>
        <button
          aria-disabled="false"
          class="ui-button-wrapper-cef1 button wrapper small ui-button-fill-cef1 ui-button-secondary-cef1 ui-button-small-cef1"
          id="toolbar-button-45"
          type="button"
        >
          <span
            class="ui-button-content-cef1"
          >
            <i
              class="material-icons icon"
            >
              format_list_numbered
            </i>
          </span>
        </button>
        <div
          class="hoverOverlay"
        >
          Add files as attachments
        </div>
        <div
          class="rightSection"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`RichField should render immutable variable 1`] = `
<div
  class="rich-textarea-wrapper"
>
  <div
    class="editor-wrapper"
    role="presentation"
  >
    <div
      class="withMinHeight"
    >
      <div
        class="DraftEditor-root"
      >
        <div
          class="DraftEditor-editorContainer"
        >
          <div
            aria-autocomplete="list"
            aria-describedby="placeholder-123"
            aria-expanded="true"
            class="notranslate public-DraftEditor-content"
            contenteditable="true"
            role="combobox"
            spellcheck="false"
            style="outline: none; user-select: text; white-space: pre-wrap; word-wrap: break-word;"
          >
            <div
              data-contents="true"
            >
              <div
                class=""
                data-block="true"
                data-editor="123"
                data-offset-key="123-0-0"
              >
                <div
                  class="public-DraftStyleDefault-block public-DraftStyleDefault-ltr"
                  data-offset-key="123-0-0"
                >
                  <span
                    data-offset-key="123-0-0"
                  >
                    <span
                      data-text="true"
                    >
                      html 
                    </span>
                  </span>
                  <div
                    class="d-inline-block align-middle"
                    title="Current agent full name"
                  >
                    <div
                      class="badge-variable badge-variable-type-current_user"
                      contenteditable="false"
                    >
                      <div>
                        <span
                          class="badge-variable-content"
                        >
                          Current agent full name
                        </span>
                      </div>
                      <button
                        class="variable-edit-btn btn btn-sm"
                        title="Edit variable"
                        type="button"
                      >
                        <i
                          class="material-icons"
                        >
                          create
                        </i>
                      </button>
                    </div>
                    <div
                      class="hidden"
                    >
                      <span
                        data-offset-key="123-1-0"
                      >
                        <span
                          data-text="true"
                        >
                          {{current_user.name}}
                        </span>
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="editor-toolbar page"
  >
    <div
      class="actionsWrapper"
    >
      <div
        class="actions"
      >
        <button
          aria-disabled="false"
          class="ui-button-wrapper-cef1 button wrapper small ui-button-fill-cef1 ui-button-secondary-cef1 ui-button-small-cef1"
          id="toolbar-button-19"
          type="button"
        >
          <span
            class="ui-button-content-cef1"
          >
            <i
              class="material-icons icon"
            >
              format_bold
            </i>
          </span>
        </button>
        <button
          aria-disabled="false"
          class="ui-button-wrapper-cef1 button wrapper small ui-button-fill-cef1 ui-button-secondary-cef1 ui-button-small-cef1"
          id="toolbar-button-20"
          type="button"
        >
          <span
            class="ui-button-content-cef1"
          >
            <i
              class="material-icons icon"
            >
              format_italic
            </i>
          </span>
        </button>
        <button
          aria-disabled="false"
          class="ui-button-wrapper-cef1 button wrapper small ui-button-fill-cef1 ui-button-secondary-cef1 ui-button-small-cef1"
          id="toolbar-button-21"
          type="button"
        >
          <span
            class="ui-button-content-cef1"
          >
            <i
              class="material-icons icon"
            >
              format_underline
            </i>
          </span>
        </button>
        <button
          aria-disabled="false"
          class="ui-button-wrapper-cef1 button wrapper small ui-button-fill-cef1 ui-button-secondary-cef1 ui-button-small-cef1"
          id="toolbar-button-22"
          type="button"
        >
          <span
            class="ui-button-content-cef1"
          >
            <i
              class="material-icons icon"
            >
              link
            </i>
          </span>
        </button>
        <span
          aria-hidden="true"
        />
        <button
          aria-disabled="false"
          class="ui-button-wrapper-cef1 button wrapper small ui-button-fill-cef1 ui-button-secondary-cef1 ui-button-small-cef1"
          id="toolbar-button-23"
          type="button"
        >
          <span
            class="ui-button-content-cef1"
          >
            <i
              class="material-icons icon"
            >
              insert_photo
            </i>
          </span>
        </button>
        <button
          aria-disabled="false"
          class="ui-button-wrapper-cef1 button wrapper small ui-button-fill-cef1 ui-button-secondary-cef1 ui-button-small-cef1"
          id="toolbar-button-24"
          type="button"
        >
          <span
            class="ui-button-content-cef1"
          >
            <i
              class="material-icons icon"
            >
              insert_emoticon
            </i>
          </span>
        </button>
        <button
          aria-disabled="false"
          class="ui-button-wrapper-cef1 wrapper ghost small ui-button-ghost-cef1 ui-button-secondary-cef1 ui-button-small-cef1"
          id="contactFormButton"
          type="button"
        >
          <span
            class="ui-button-content-cef1"
          >
            <i
              class="material-icons icon"
            >
              wysiwyg
            </i>
          </span>
        </button>
        <button
          aria-disabled="false"
          class="ui-button-wrapper-cef1 button wrapper small ui-button-fill-cef1 ui-button-secondary-cef1 ui-button-small-cef1"
          id="toolbar-button-25"
          type="button"
        >
          <span
            class="ui-button-content-cef1"
          >
            <i
              class="material-icons icon"
            >
              title
            </i>
          </span>
        </button>
        <button
          aria-disabled="false"
          class="ui-button-wrapper-cef1 button wrapper small ui-button-fill-cef1 ui-button-secondary-cef1 ui-button-small-cef1"
          id="toolbar-button-26"
          type="button"
        >
          <span
            class="ui-button-content-cef1"
          >
            <i
              class="material-icons icon"
            >
              format_list_bulleted
            </i>
          </span>
        </button>
        <button
          aria-disabled="false"
          class="ui-button-wrapper-cef1 button wrapper small ui-button-fill-cef1 ui-button-secondary-cef1 ui-button-small-cef1"
          id="toolbar-button-27"
          type="button"
        >
          <span
            class="ui-button-content-cef1"
          >
            <i
              class="material-icons icon"
            >
              format_list_numbered
            </i>
          </span>
        </button>
        <div
          class="hoverOverlay"
        >
          Add files as attachments
        </div>
        <div
          class="rightSection"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`RichField should render mutable variable 1`] = `
<div>
  <div
    class="rich-textarea-wrapper"
  >
    <div
      class="editor-wrapper"
      role="presentation"
    >
      <div
        class="withMinHeight"
      >
        <div
          class="DraftEditor-root"
        >
          <div
            class="DraftEditor-editorContainer"
          >
            <div
              aria-autocomplete="list"
              aria-describedby="placeholder-123"
              aria-expanded="true"
              class="notranslate public-DraftEditor-content"
              contenteditable="true"
              role="combobox"
              spellcheck="false"
              style="outline: none; user-select: text; white-space: pre-wrap; word-wrap: break-word;"
            >
              <div
                data-contents="true"
              >
                <div
                  class=""
                  data-block="true"
                  data-editor="123"
                  data-offset-key="123-0-0"
                >
                  <div
                    class="public-DraftStyleDefault-block public-DraftStyleDefault-ltr"
                    data-offset-key="123-0-0"
                  >
                    <span
                      data-offset-key="123-0-0"
                    >
                      <span
                        data-text="true"
                      >
                        html
                      </span>
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="editor-toolbar page"
    >
      <div
        class="actionsWrapper"
      >
        <div
          class="actions"
        >
          <button
            aria-disabled="false"
            class="ui-button-wrapper-cef1 button wrapper small ui-button-fill-cef1 ui-button-secondary-cef1 ui-button-small-cef1"
            id="toolbar-button-28"
            type="button"
          >
            <span
              class="ui-button-content-cef1"
            >
              <i
                class="material-icons icon"
              >
                format_bold
              </i>
            </span>
          </button>
          <button
            aria-disabled="false"
            class="ui-button-wrapper-cef1 button wrapper small ui-button-fill-cef1 ui-button-secondary-cef1 ui-button-small-cef1"
            id="toolbar-button-29"
            type="button"
          >
            <span
              class="ui-button-content-cef1"
            >
              <i
                class="material-icons icon"
              >
                format_italic
              </i>
            </span>
          </button>
          <button
            aria-disabled="false"
            class="ui-button-wrapper-cef1 button wrapper small ui-button-fill-cef1 ui-button-secondary-cef1 ui-button-small-cef1"
            id="toolbar-button-30"
            type="button"
          >
            <span
              class="ui-button-content-cef1"
            >
              <i
                class="material-icons icon"
              >
                format_underline
              </i>
            </span>
          </button>
          <button
            aria-disabled="false"
            class="ui-button-wrapper-cef1 button wrapper small ui-button-fill-cef1 ui-button-secondary-cef1 ui-button-small-cef1"
            id="toolbar-button-31"
            type="button"
          >
            <span
              class="ui-button-content-cef1"
            >
              <i
                class="material-icons icon"
              >
                link
              </i>
            </span>
          </button>
          <span
            aria-hidden="true"
          />
          <button
            aria-disabled="false"
            class="ui-button-wrapper-cef1 button wrapper small ui-button-fill-cef1 ui-button-secondary-cef1 ui-button-small-cef1"
            id="toolbar-button-32"
            type="button"
          >
            <span
              class="ui-button-content-cef1"
            >
              <i
                class="material-icons icon"
              >
                insert_photo
              </i>
            </span>
          </button>
          <button
            aria-disabled="false"
            class="ui-button-wrapper-cef1 button wrapper small ui-button-fill-cef1 ui-button-secondary-cef1 ui-button-small-cef1"
            id="toolbar-button-33"
            type="button"
          >
            <span
              class="ui-button-content-cef1"
            >
              <i
                class="material-icons icon"
              >
                insert_emoticon
              </i>
            </span>
          </button>
          <button
            aria-disabled="false"
            class="ui-button-wrapper-cef1 wrapper ghost small ui-button-ghost-cef1 ui-button-secondary-cef1 ui-button-small-cef1"
            id="contactFormButton"
            type="button"
          >
            <span
              class="ui-button-content-cef1"
            >
              <i
                class="material-icons icon"
              >
                wysiwyg
              </i>
            </span>
          </button>
          <button
            aria-disabled="false"
            class="ui-button-wrapper-cef1 button wrapper small ui-button-fill-cef1 ui-button-secondary-cef1 ui-button-small-cef1"
            id="toolbar-button-34"
            type="button"
          >
            <span
              class="ui-button-content-cef1"
            >
              <i
                class="material-icons icon"
              >
                title
              </i>
            </span>
          </button>
          <button
            aria-disabled="false"
            class="ui-button-wrapper-cef1 button wrapper small ui-button-fill-cef1 ui-button-secondary-cef1 ui-button-small-cef1"
            id="toolbar-button-35"
            type="button"
          >
            <span
              class="ui-button-content-cef1"
            >
              <i
                class="material-icons icon"
              >
                format_list_bulleted
              </i>
            </span>
          </button>
          <button
            aria-disabled="false"
            class="ui-button-wrapper-cef1 button wrapper small ui-button-fill-cef1 ui-button-secondary-cef1 ui-button-small-cef1"
            id="toolbar-button-36"
            type="button"
          >
            <span
              class="ui-button-content-cef1"
            >
              <i
                class="material-icons icon"
              >
                format_list_numbered
              </i>
            </span>
          </button>
          <div
            class="hoverOverlay"
          >
            Add files as attachments
          </div>
          <div
            class="rightSection"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;
